--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,18 +7,25 @@ environment:
   sdk: '>=2.19.6 <3.0.0'
 
 dependencies:
+  cached_network_image: ^3.2.3
   cloud_firestore: ^4.5.3
   firebase_auth: ^4.4.2
   firebase_core: ^2.10.0
-  firebase_storage: ^11.1.1
+  firebase_storage: ^11.1.2
   flutter:
     sdk: flutter
+  geolocator: ^9.0.2
   google_fonts: ^4.0.4
+  google_maps_flutter: ^2.2.6
   google_nav_bar: ^5.0.6
+  image_picker: ^0.8.7+4
   lottie: ^2.3.2
+  path_provider: ^2.0.14
+  permission_handler: ^10.2.0
   provider: ^6.0.5
   shared_preferences: ^2.1.0
   smooth_page_indicator: ^1.1.0
+  vector_math: ^2.1.4
 
 dev_dependencies:
   flutter_test:
