--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   shared_preferences: ^2.1.0
   smooth_page_indicator: ^1.1.0
   vector_math: ^2.1.4
+  firebase_messaging:
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
