--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Ignore specific files
+android/app/src/main/AndroidManifest.xml
+android/app/google-services.json
